# oneshot

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  oneshot_example.cpp
include/: oneshot.hpp
test/unit/: CMakeLists.txt  main.cpp  oneshot_test.cpp
